@@ -38,7 +38,6 @@
 #define OPTION_ASM             "--asm="
 #define OPTION_NO_STD_CRT0     "--no-std-crt0"
 #define OPTION_RESERVE_IY      "--reserve-regs-iy"
-#define OPTION_OPTRALLOC_REMAT "--optralloc-remat"
 #define OPTION_DUMP_GRAPHS     "--dump-graphs"
 #define OPTION_MAX_ALLOCS_NODE "--max-allocs-per-node"
 #define OPTION_OLDRALLOC       "--oldralloc"
@@ -69,7 +68,6 @@ static OPTION _z80_options[] = {
   {0, OPTION_NO_STD_CRT0,     &options.no_std_crt0, "For the z80/gbz80 do not link default crt0.rel"},
   {0, OPTION_RESERVE_IY,      &z80_opts.reserveIY, "Do not use IY (incompatible with --fomit-frame-pointer)"},
   {0, OPTION_MAX_ALLOCS_NODE, &options.max_allocs_per_node, "Maximum number of register assignments considered at each node of the tree decomposition", CLAT_INTEGER},
-  {0, OPTION_OPTRALLOC_REMAT, &z80_opts.optralloc_remat, "Handle rematerializeable variables in new register allocator"},
   {0, OPTION_DUMP_GRAPHS,     &z80_opts.dump_graphs, "Dump control flow graph, conflict graph and tree decomposition in register allocator"},
   {0, OPTION_OLDRALLOC,       &z80_opts.oldralloc, "Use old register allocator"},
   {0, NULL}
@@ -634,7 +632,6 @@ _setDefaultOptions (void)
   optimize.label4 = 1;
   optimize.loopInvariant = 1;
   optimize.loopInduction = 1;
-  z80_opts.optralloc_remat = 0;
   z80_opts.dump_graphs = 0;
 }
 
